--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,401 @@
-.App {
-  text-align: center;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
+ul[class],
+ol[class] {
+  padding: 0;
+}
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+ul[class],
+ol[class] {
+  list-style: none;
+}
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+img {
+  max-width: 100%;
+  display: block;
+}
+article > * + * {
+  margin-top: 1em;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+  cursor: pointer;
+}
+body {
+  color: #000;
+  font-size: 18px;
+  width: 1235px;
+  margin: 0 auto;
+  font-family: "Roboto", sans-serif;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #0067a3;
+  height: 55px;
+  position: relative;
+}
+.logo {
+  font-size: 28px;
+  color: #fff;
+  text-decoration: none;
+  margin-left: 13px;
+}
+.user {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 16px;
+}
+.user-img {
+  display: block;
+  background-image: url("./images/user-img.jpg");
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 6px;
+}
+.arrow {
+  display: block;
+  background: none;
+  background-image: url("./images/menu-btn.svg");
+  width: 13px;
+  height: 8px;
+  border: none;
+}
+.arrow_up {
+  background: none;
+  border: none;
+  height: 8px;
+  width: 12px;
+  background-image: url("./images/vector2.svg");
+}
+.menu {
+  position: absolute;
+  top: 50px;
+  right: 10px;
+  width: 150px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  transition: opacity 0.2s ease, transform 0.2s ease;
+  opacity: 0;
+  transform: translateY(-10px);
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.menu.open {
+  opacity: 1;
+  transform: translateY(0);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menu-item {
+  padding: 8px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.items {
+  transition: color 0.3s ease;
+  pointer-events: all;
+  text-decoration: none;
+color: #000;
+}
+.items:hover {
+  color: #0067a3;
+}
+.menu-item:hover {
+  background-color: #f7f7f7;
+}
+.main {
+  background-color: #0079bf;
+  padding: 20px 16px 32px 19px;
+}
+.kanban-board {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+}
+.board {
+  background-color: #fff;
+  width: 282px;
+  height: fit-content;
+  border-radius: 5px;
+  background: #EBECF0;
+}
+.title {
+  font-size: 18px;
+  margin: 12px 0 22px 12px;
+}
+.text {
+  margin-bottom: 15px;
+  text-decoration: none;
+  color: #000;
+  display: block;
+  transition: all 0.3s ease;
+  background:#fff;
+  padding: 7px 8px;
+  border-radius: 5px;
+}
+.text:hover {
+  color: #0079bf;
+}
+span {
+  margin-bottom: 28px;
+  display: block;
+}
+.block-item {
+  margin-left: 20px;
+  margin-right: 5px;
+}
+.block-item_ready{
+  display: flex;
+  margin-left: 20px;
+}
+.block-item_items {
+  height: 244px;
+  overflow-y: scroll;
+  padding-right: 5px;
+}
+.block-item_items::-webkit-scrollbar {
+  width: 12px;
+}
+.block-item_items::-webkit-scrollbar-thumb {
+  background-color: #aaa; 
+  border-radius: 5px; 
+}
+.block-item_items::-webkit-scrollbar-track {
+  background-color: #fff;
+  border-radius: 5px;
+}
+.btn {
+  color: #5e6c84;
+  border: none;
+  font-size: 18px;
+  margin-left: 13px;
+  padding: 0;
+  background: none;
+}
+.btn_active {
   color: white;
+  margin: 15px;
+  background: grey;
+  border: none;
+  border-radius: 5px;
+  height: 35px;
+  width: 97px;
 }
-
-.App-link {
-  color: #61dafb;
+.btn_disabled {
+  color: grey;
+  border: none;
+  font-size: 18px;
+  margin-left: 13px;
+  padding: 0;
+  background: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.btn::before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  background-image: url("./images/vector.svg");
+  display: inline-block;
+  margin-right: 3px;
+}
+.btn-add {
+  margin: 15px;
+  color: white;
+  background: #0079bf;
+  width: 95px;
+  border: none;
+  border-radius: 5px;
+  height: 35px;
+}
+.input-add {
+  height: 35px;
+  padding: 13px 13px 7px;
+  margin-left: 15px;
+  border: none;
+  border-radius: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+  width: 90%;
+}
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #0067a3;
+  height: 55px;
+  padding-left: 21px;
+  padding-right: 19px;
+  color: #fff;
+}
+.tasks {
+  display: flex;
+  height: 25px;
+}
+.btn-remove {
+  background-color: red;
+  color: #fff;
+  border-color: #fff;
+}
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+  background:#fff;
+  padding: 7px 8px;
+  border-radius: 5px
+}
+.list-new-item {
+  display: flex;
+}
+.select {
+  width: 90%;
+  display: block;
+  border: none;
+  border-radius:5px;
+  margin: 15px;
+  height: 35px;
+}
+.kanban-description {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  background-color: #fff;
+  padding: 22px 23px 28px 28px;
+  border-radius: 5px;
+  height: 548px;
+}
+.title-description {
+  margin-bottom: 30px;
+}
+.close {
+  background: none;
+  border: none;
+  background-image: url("./images/close.svg");
+  height: 23px;
+  width: 23px;
+}
+.text-description {
+  display: block;
+  max-width: 621px;
+  text-decoration: none;
+  color: #000;
+  font-size: 18px;
+}
+@media (max-width: 1250px) {
+  body{
+    max-width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+  .board{
+    width: 24%;
+  }
+  
+}
+@media (max-width: 1250px) {
+  body{
+    font-size: 15px;
+  }
+  .btn-remove{
+    font-size: 13px;
+  }
+  .block-item{
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+@media (max-width: 820px) {
+  .main{
+    padding: 50px 16px 50px 18px;
+  }
+  .kanban-board{
+    flex-wrap: wrap;
+  }
+  .board:nth-child(2){
+    margin-bottom: 20px;
+  }
+  .board{
+    width: 48%;
+  }
+  .block-item_items{
+    width: 95%;
+  }
+  .text-description{
+    max-width: 520px;
+    font-size: 16px;
+  }
+}
+@media (max-width: 620px){
+    .kanban-description{
+        flex-direction: column;
+        justify-content: flex-start
+    }
+    .close{
+        align-self: end;
+        margin-bottom: 20px;
+    }
+    .text-description{
+        max-width: 90%;
+        font-size: 14px;
+    }
+}
+@media (max-width: 550px) {
+  .kanban-board{
+    padding-bottom: 187px;
+  }
+  footer{
+    display: none;
+  }
+}
+@media (max-width: 450px) {
+  header{
+    background-color: #0079bf;
+    justify-content: flex-end;
+  }
+  .logo{
+    display: none;
+  }
+  .main{
+    padding: 0;
+    padding-top: 107px;
+  }
+  .kanban-board{
+    display: block;
+  }
+  .board{
+    width: 90%;
+    margin: 30px auto;
+    padding-top: 12px;
+    padding-bottom: 10px;
+  }
+  .title{
+    margin-top: 0;
   }
 }
